# code_mqs

./: .gitignore  LICENSE.md  README.md  ax_client_snapshot.json  ax_code.ipynb  pyproject.toml  requirements.txt
data/: ax_client_snapshot.json
notebooks/: baybe.ipynb
src/ax_code/: attach_training_data.py  hypervolume.py  models.py  objectives.py  optimization.py  parameters.py  resources.py  visualizations.py
tests/: test.py  test_example.py
